Added code to save file

--- a/app/src/main/res/layout/activity_api_new.xml
+++ b/app/src/main/res/layout/activity_api_new.xml
@@ -4,36 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:fitsSystemWindows="true"
+    tools:context=".api_new">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-       <!-- <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="#FF4500"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />-->
+
 
     </android.support.design.widget.AppBarLayout>
 
+    <include layout="@layout/content_main_new" />
+
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/viewButton"
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginRight="20px"
         android:layout_marginBottom="20dp"
-        app:backgroundTint="#FF4500"
-        app:srcCompat="?attr/actionModeShareDrawable"
-        android:src="@drawable/view">
-
-    </android.support.design.widget.FloatingActionButton>
-
-
-    <include layout="@layout/content_main" />
+        android:src="@android:drawable/ic_menu_gallery" />
 
 </android.support.design.widget.CoordinatorLayout>
