--- a/app/src/main/res/layout/activity_api_new.xml
+++ b/app/src/main/res/layout/activity_api_new.xml
@@ -18,6 +18,14 @@
 
     <include layout="@layout/content_main_new" />
 
+    <Button
+        android:id="@+id/imageButton"
+        android:layout_width="64dp"
+        android:layout_height="62dp"
+        android:background="@drawable/back"
+        android:text="Speech"
+        android:clickable="true" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
