--- a/app/src/main/res/layout/activity_api_new.xml
+++ b/app/src/main/res/layout/activity_api_new.xml
@@ -17,6 +17,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main_new" />
+<!--
 
     <Button
         android:id="@+id/imageButton"
@@ -25,6 +26,7 @@
         android:background="@drawable/back"
         android:text="Speech"
         android:clickable="true" />
+-->
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -33,6 +35,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginRight="20px"
         android:layout_marginBottom="20dp"
-        android:src="@android:drawable/ic_menu_gallery" />
+        app:backgroundTint="#94549D"
+        android:src="@drawable/speech" />
 
 </android.support.design.widget.CoordinatorLayout>
