--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,16 +11,20 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-       <!-- <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="#FF4500"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />-->
-        <ImageView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            app:logo="@drawable/logo6"/>
+        <!--<android.support.v7.widget.Toolbar-->
+            <!--android:id="@+id/toolbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="?attr/actionBarSize"-->
+            <!--android:background="#FF4500"-->
+            <!--app:popupTheme="@style/AppTheme.PopupOverlay" >-->
+
+            <ImageView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                app:logo="@drawable/logo6"/>
+
+        <!--</android.support.v7.widget.Toolbar>-->
+
 
     </android.support.design.widget.AppBarLayout>
 
